🔨 disable info button depending on available song info, improve tooltip handling, fix remote z-index

--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -813,18 +813,6 @@ a {
 					position: absolute;
 					bottom: 0;
 					right: 0;
-
-					.remote-control {
-						opacity: 0;
-						position: absolute;
-						top: -1rem;
-						right: 3.5rem;
-						transition: top .2s, opacity .2s;
-					}
-					&:hover .remote-control {
-						top: -2rem;
-						opacity: 1;
-					}
 				}
 			}
 		}
@@ -868,7 +856,7 @@ a {
 
 			.modal-footer {
 				width: 100%;
-				z-index: 10;
+				z-index: 30;
 
 				.navigation-prev {
 					position: absolute;
@@ -898,6 +886,18 @@ a {
 					&:hover {
 						opacity: 1;
 					}
+				}
+				
+				.remote-control {
+					opacity: 0;
+					position: absolute;
+					top: -1rem;
+					right: 3.5rem;
+					transition: top .2s, opacity .2s;
+				}
+				&:hover .remote-control {
+					top: -2rem;
+					opacity: 1;
 				}
 			}
 		}
